--- a/README
+++ b/README
@@ -1,3 +1,14 @@
 btllib
 
-BTL common library
+BTL common code library in C++ with Python and Java wrappers.
+
+C++
+===
+To use with C++, simply copy the libbtl directory into your project and use any headers in the `include` directory.
+
+Python and Java
+===============
+To use with Python or Java, libbtl needs to compile the C++ code. Run
+`./compile`
+which will create `python and `java` directories in libbtl with the corresponding language files.
+The wrappers correspond one-to-one with C++ code so any functions and classes can be used under the same name.
