--- a/paper.bib
+++ b/paper.bib
@@ -130,3 +130,11 @@ DOI = {10.3390/dna2020009}
     note = {giz109},
     eprint = {https://academic.oup.com/gigascience/article-pdf/8/9/giz109/30043086/giz109.pdf},
 }
+
+@misc{kseq,
+  author = {Heng Li},
+  title = {seqtk},
+  howpublished = "\url{https://github.com/lh3/seqtk}",
+  year = {2016}, 
+  note = "[Online; accessed 02-August-2022]"
+}
