Add ref to Physlr

--- a/paper.bib
+++ b/paper.bib
@@ -101,6 +101,20 @@ abstract = {The sustained growth in data throughput in DNA sequencing platforms 
   journal = {{BMC} Bioinformatics}
 }
 
+@Article{dna2020009,
+AUTHOR = {Afshinfard, Amirhossein and Jackman, Shaun D. and Wong, Johnathan and Coombe, Lauren and Chu, Justin and Nikolic, Vladimir and Dilek, Gokce and Malkoç, Yaman and Warren, René L. and Birol, Inanc},
+TITLE = {Physlr: Next-Generation Physical Maps},
+JOURNAL = {DNA},
+VOLUME = {2},
+YEAR = {2022},
+NUMBER = {2},
+PAGES = {116--130},
+URL = {https://www.mdpi.com/2673-8856/2/2/9},
+ISSN = {2673-8856},
+ABSTRACT = {While conventional physical maps helped build most of the reference genomes we use today, generating the maps was prohibitively expensive, and the technology was abandoned in favor of whole-genome shotgun sequencing (WGS). However, genome assemblies generated using WGS data are often less contiguous. We introduce Physlr, a tool that leverages long-range information provided by some WGS technologies to construct next-generation physical maps. These maps have many potential applications in genome assembly and analysis, including, but not limited to, scaffolding. In this study, using experimental linked-read datasets from two humans, we used Physlr to construct chromosome-scale physical maps (NGA50s of 52 Mbp and 70 Mbp). We also demonstrated how these physical maps can help scaffold human genome assemblies generated using various sequencing technologies and assembly tools. Across all experiments, Physlr substantially improved the contiguity of baseline assemblies over state-of-the-art linked-read scaffolders.},
+DOI = {10.3390/dna2020009}
+}
+
 @article{10.1093/gigascience/giz109,
     author = {Georgeson, Peter and Syme, Anna and Sloggett, Clare and Chung, Jessica and Dashnow, Harriet and Milton, Michael and Lonsdale, Andrew and Powell, David and Seemann, Torsten and Pope, Bernard},
     title = "{Bionitio: demonstrating and facilitating best practices for bioinformatics command-line software}",
